--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2><a href="mobius.htm">mobius</a></h2>
 
     <div class="description">
-      HTML5 CSS3 mobiuse strip 
+      HTML5 CSS3 möbius strip 
     </div>
 
     
