--- a/mobius.htm
+++ b/mobius.htm
@@ -119,9 +119,9 @@ window.onload = setup(0);
  <div class="video-js-box">
     <!-- Using the Video for Everybody Embed Code http://camendesign.com/code/video_for_everybody -->
     <video id="example_video_1" class="video-js" width="640" height="264" controls="controls" preload="auto" poster="mobius-clip.png">
-      <source src="http://invoicer.pl/intro/mobius-clip.webm" type='video/webm'; codecs="vp8, vorbis"' />
-      <source1 src="http://invoicer.pl/intro/mobius-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
-      <source1 src="http://invoicer.pl/intro/mobius-clip.ogv" type='video/ogg; codecs="theora, vorbis"' />      
+      <source src="mobius-clip.webm" type='video/webm; codecs="vp8, vorbis"' />
+      <source src="http://invoicer.pl/intro/mobius-clip.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+      <source src="http://invoicer.pl/intro/mobius-clip.ogv" type='video/ogg; codecs="theora, vorbis"' />      
     </video>
 </div>
 
