--- a/mobius.htm
+++ b/mobius.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset='utf-8'>
 <link href="mobius.css" rel="stylesheet" type="text/css">
 <style>
 
@@ -86,8 +87,8 @@ window.onload = setup(0);
 </head>
 
 <body >
-<h1> <img src="html5.png" > Möbius strip</h1>
-<p> Animation of <a href="http://en.wikipedia.org/wiki/M%C3%B6bius_strip"> möbius strip</a> using 3d transform</p>
+<h1> <img src="html5.png" > MÃ¶bius strip</h1>
+<p> Animation of <a href="http://en.wikipedia.org/wiki/M%C3%B6bius_strip"> mÃ¶bius strip</a> using 3d transform</p>
 <p>  This is working only on <a href="http://www.mozilla.org/en-US/firefox/channel/">Aurora</a> browser (Firefox 11)</p>
 
 
